--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.5.0",
     "embla-carousel-react": "^8.3.0",
     "framer-motion": "^11.18.2",
     "i18next": "^24.2.3",
@@ -53,6 +54,7 @@
     "input-otp": "^1.2.4",
     "lucide-react": "^0.488.0",
     "next-themes": "^0.3.0",
+    "process": "^0.11.10",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
